--- a/food_delivery/package.json
+++ b/food_delivery/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/lab": "^5.0.0-alpha.92",
+    "@mui/material": "^5.9.2",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,11 +18,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.5",
-    "switch": "0.0.0",
-    "tailwind": "^4.0.0",
+    "tailwind-scrollbar": "^1.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,7 +51,6 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "sass": "^1.54.0",
-    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.1.6"
   }
 }
