--- a/food_delivery/package.json
+++ b/food_delivery/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.92",
     "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
@@ -17,7 +18,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.5",
     "tailwind-scrollbar": "^1.3.1",
